--- a/app/src/main/res/drawable/info_stop.xml
+++ b/app/src/main/res/drawable/info_stop.xml
@@ -5,12 +5,20 @@
             <solid android:color="#908BC34A" />
         </shape>
     </item>
-    <item android:top="2dp" android:left="2dp" android:right="2dp" android:bottom="2dp">
+    <item
+        android:bottom="2dp"
+        android:left="2dp"
+        android:right="2dp"
+        android:top="2dp">
         <shape android:shape="oval">
             <solid android:color="#97689F38" />
         </shape>
     </item>
-    <item android:top="25dp" android:left="25dp" android:right="25dp" android:bottom="25dp">
+    <item
+        android:bottom="25dp"
+        android:left="25dp"
+        android:right="25dp"
+        android:top="25dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/text_color_black" />
         </shape>
