--- a/app/src/main/res/layout/busline_row.xml
+++ b/app/src/main/res/layout/busline_row.xml
@@ -2,31 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:weightSum="1"
     android:minHeight="90dp"
+    android:orientation="horizontal"
+    android:paddingBottom="@dimen/spacing_tiny"
     android:paddingTop="@dimen/spacing_tiny"
-    android:paddingBottom="@dimen/spacing_tiny">
+    android:weightSum="1">
 
     <TextView
         android:id="@+id/busNumberTextView"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:gravity="center"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="26dp"
-        android:background="@drawable/bus_number_circle"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="@dimen/spacing_normal"
         android:layout_marginRight="@dimen/spacing_normal"
-        android:textColor="#ffffff" />
+        android:background="@drawable/bus_number_circle"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#ffffff"
+        android:textSize="26dp" />
 
     <LinearLayout
+        android:id="@+id/busLineButtonLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/busLineButtonLayout"
-        android:layout_gravity="center_vertical">
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
 
     </LinearLayout>
 </LinearLayout>
