--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -19,8 +19,8 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
-            tools:text="arrives/departures"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            tools:text="arrives/departures" />
 
         <View
             android:id="@+id/infoCircleHolder"
@@ -32,143 +32,140 @@
             android:background="@drawable/info_circle" />
 
 
-
-
         <TextView
+            android:id="@+id/info_line_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:id="@+id/info_line_name"
             android:layout_above="@+id/info_above_circle"
             android:layout_centerHorizontal="true"
-            tools:text="name"
-            android:textSize="32sp" />
-
+            android:padding="10dp"
+            android:textSize="32sp"
+            tools:text="name" />
 
 
         <TextView
+            android:id="@+id/info_minutes_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="min"
-            android:textColor="@color/text_color_white"
-            android:textSize="20sp"
-            android:id="@+id/info_minutes_text"
+            android:layout_alignBottom="@+id/infoCircleHolder"
+            android:layout_alignEnd="@+id/infoCircleHolder"
+            android:layout_alignLeft="@+id/infoCircleHolder"
+            android:layout_alignRight="@+id/infoCircleHolder"
+            android:layout_alignStart="@+id/infoCircleHolder"
+
+            android:layout_below="@+id/info_above_circle"
             android:gravity="center"
             android:paddingTop="60dp"
-
-            android:layout_alignLeft="@+id/infoCircleHolder"
-            android:layout_alignStart="@+id/infoCircleHolder"
-            android:layout_alignRight="@+id/infoCircleHolder"
-            android:layout_alignEnd="@+id/infoCircleHolder"
-            android:layout_below="@+id/info_above_circle"
-            android:layout_alignBottom="@+id/infoCircleHolder" />
+            android:textColor="@color/text_color_white"
+            android:textSize="20sp"
+            tools:text="min" />
 
         <TextView
-
-            android:layout_alignLeft="@+id/infoCircleHolder"
-            android:layout_alignStart="@+id/infoCircleHolder"
-            android:layout_alignRight="@+id/infoCircleHolder"
-            android:layout_alignEnd="@+id/infoCircleHolder"
-            android:layout_below="@+id/info_above_circle"
 
             android:id="@+id/timeTilArrival"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_color_white"
-            android:textSize="70sp"
-            tools:text="16"
+            android:layout_alignBottom="@+id/infoCircleHolder"
+            android:layout_alignEnd="@+id/infoCircleHolder"
+
+            android:layout_alignLeft="@+id/infoCircleHolder"
+            android:layout_alignRight="@+id/infoCircleHolder"
+            android:layout_alignStart="@+id/infoCircleHolder"
+            android:layout_below="@+id/info_above_circle"
+            android:layout_centerHorizontal="true"
             android:gravity="center"
             android:paddingBottom="30dp"
-            android:layout_centerHorizontal="true"
-            android:layout_alignBottom="@+id/infoCircleHolder" />
+            android:textColor="@color/text_color_white"
+            android:textSize="70sp"
+            tools:text="16" />
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:paddingBottom="@dimen/spacing_huge"
-            android:id="@+id/relativeLayout">
+            android:paddingBottom="@dimen/spacing_huge">
+
             <TextView
                 android:id="@+id/info_txt_from"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/info_from"
-                android:paddingBottom="3dp"
-                android:paddingTop="3dp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:paddingBottom="3dp"
                 android:paddingRight="10dp"
-                android:layout_centerHorizontal="true" />
+                android:paddingTop="3dp"
+                android:text="@string/info_from"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/info_source"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Chalmers"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_alignBottom="@+id/info_txt_from"
+                android:layout_centerHorizontal="true"
                 android:layout_toEndOf="@+id/info_txt_from"
                 android:layout_toRightOf="@+id/info_txt_from"
-                android:layout_centerHorizontal="true" />
-
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                tools:text="Chalmers" />
 
 
             <TextView
                 android:id="@+id/info_txt_to"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/info_to"
-                android:layout_marginTop="10dp"
-                android:paddingBottom="3dp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_gravity="center_vertical"
-                android:layout_below="@+id/info_source"
-                android:layout_alignRight="@+id/info_txt_from"
                 android:layout_alignEnd="@+id/info_txt_from"
                 android:layout_alignLeft="@+id/info_txt_from"
+                android:layout_alignRight="@+id/info_txt_from"
                 android:layout_alignStart="@+id/info_txt_from"
+                android:layout_below="@+id/info_source"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="10dp"
                 android:gravity="end"
+                android:paddingBottom="3dp"
                 android:paddingRight="10dp"
-                android:layout_centerHorizontal="true" />
+                android:text="@string/info_to"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
             <TextView
                 android:id="@+id/info_destination"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Lindholmen"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_alignBottom="@+id/info_txt_to"
                 android:layout_alignLeft="@+id/info_source"
                 android:layout_alignStart="@+id/info_source"
-                android:layout_centerHorizontal="true" /></RelativeLayout>
+                android:layout_centerHorizontal="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                tools:text="Lindholmen" />
+        </RelativeLayout>
 
 
         <Button
             android:id="@+id/info_stop"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_gravity="center_vertical"
-            android:background="@drawable/info_stop_selector"
             android:layout_alignBottom="@+id/infoCircleHolder"
             android:layout_alignRight="@+id/infoCircleHolder"
-            android:layout_marginRight="-14dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginBottom="-14dp"
-            />
+            android:layout_marginRight="-14dp"
+            android:background="@drawable/info_stop_selector" />
 
         <TextView
             android:id="@+id/info_center_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
             android:textColor="@color/text_color_white"
             android:textSize="40sp"
-            tools:text="nu"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center" />
+            tools:text="nu" />
 
     </RelativeLayout>
 
@@ -176,15 +173,15 @@
         android:id="@+id/info_delayed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        tools:text="[Fordonstyp] är ?? minuter sen"
-        android:visibility="invisible"
-        android:gravity="center"
-        android:textColor="#FF0000"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_alignTop="@+id/infoCircleHolder"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp" />
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FF0000"
+        android:visibility="invisible"
+        tools:text="[Fordonstyp] är ?? minuter sen" />
 
 
 </FrameLayout>
