--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -2,49 +2,49 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/spacing_normal"
     android:paddingEnd="@dimen/spacing_normal"
-    android:paddingStart="@dimen/spacing_normal"
-    android:paddingBottom="@dimen/spacing_normal">
+    android:paddingStart="@dimen/spacing_normal">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/countdown_progressbar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:fontFamily="@string/font"
         android:inputType="none"
         android:singleLine="false"
         android:text="@string/your_ticket"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
-        android:textSize="23sp"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:layout_above="@+id/countdown_progressbar"
-        android:layout_centerHorizontal="true" />
+        android:textSize="23sp" />
 
     <ProgressBar
         android:id="@+id/countdown_progressbar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_gravity="center"
-        android:indeterminate="false"
-        android:progressDrawable="@drawable/countdown_ring"
-        android:max="10000"
-        android:layout_alignRight="@+id/button_get_ticket"
+        android:layout_alignBottom="@+id/button_get_ticket"
         android:layout_alignEnd="@+id/button_get_ticket"
         android:layout_alignLeft="@+id/button_get_ticket"
+        android:layout_alignRight="@+id/button_get_ticket"
         android:layout_alignStart="@+id/button_get_ticket"
         android:layout_alignTop="@+id/button_get_ticket"
-        android:layout_alignBottom="@+id/button_get_ticket" />
+        android:layout_gravity="center"
+        android:indeterminate="false"
+        android:max="10000"
+        android:progressDrawable="@drawable/countdown_ring" />
 
 
     <LinearLayout
         android:id="@+id/timeleft_all"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:orientation="horizontal"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
+        android:orientation="horizontal"
+        android:visibility="invisible">
 
         <TextView
             android:id="@+id/timeleft"
@@ -64,13 +64,13 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/linearLayout"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false">
+        android:layout_alignParentStart="false"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -98,13 +98,13 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/linearLayout3"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="false"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="false">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -133,10 +133,10 @@
         android:id="@+id/button_get_ticket"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
-        android:scaleType="center"
+        android:layout_centerInParent="true"
         android:adjustViewBounds="true"
         android:background="@drawable/ticket_button"
-        android:src="@drawable/ic_card_travel_black_48dp"
-        android:layout_centerInParent="true" />
+        android:scaleType="center"
+        android:src="@drawable/ic_card_travel_black_48dp" />
 
 </RelativeLayout>
