--- a/app/src/main/res/drawable/bus_number_circle.xml
+++ b/app/src/main/res/drawable/bus_number_circle.xml
@@ -2,4 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/bg_grey_50" />
+    <stroke android:color="@color/divider_color"
+        android:width="1px"/>
 </shape>
