--- a/app/src/main/res/drawable/bus_number_circle.xml
+++ b/app/src/main/res/drawable/bus_number_circle.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/bg_grey_50" />
-    <stroke android:color="@color/divider_color"
-        android:width="1px"/>
+    <stroke
+        android:width="1px"
+        android:color="@color/divider_color" />
 </shape>
